src/objects/QPMS__Number_Scheme__c.object
<CustomObject>
    <description>This object stores number scheme information.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Annual_reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Decimal__c</fullName>
        <label>Decimal</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicate the number scheme referred to a specific Department</description>
        <label>Department</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>Number Schemes</relationshipLabel>
        <relationshipName>Number_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__MAXDECIMAL__c</fullName>
        <label>MAXDECIMAL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__MAXNUMBER__c</fullName>
        <description>Used to calculate next consequence  auto number for referred object</description>
        <label>MAXNUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Module__c</fullName>
        <description>This field indicate the number scheme referred to a specific module</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>CAPA</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>CSMS Standard</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Inspection PO</fullName>
                </value>
                <value>
                    <fullName>US-FDA</fullName>
                </value>
                <value>
                    <fullName>Decision Tree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Name_Module__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Name Module Site</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Number_Scheme_Formula__c</fullName>
        <label>Number Scheme Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_format__c</fullName>
        <description>Number format for number scheme</description>
        <label>Number format</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Prefix_Number_format_Suffix_Revision__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Prefix Number format Suffix Revision</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Prefix__c</fullName>
        <description>This field indicate the Prefix of number scheme format</description>
        <label>Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Revision__c</fullName>
        <description>This field indicate the revision format for number scheme</description>
        <label>Revision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A.1</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>1.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicate the number scheme referred to a specific Site</description>
        <label>Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Number Schemes</relationshipLabel>
        <relationshipName>Number_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Suffix__c</fullName>
        <description>This field indicate the Suffix of number scheme format</description>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__YY__c</fullName>
        <formula>RIGHT(TEXT (YEAR( TODAY() )), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YEAR</label>
        <type>Text</type>
    </fields>
    <label>Number Scheme</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Prefix__c</columns>
        <columns>QPMS__Suffix__c</columns>
        <columns>QPMS__Number_format__c</columns>
        <columns>QPMS__Prefix_Number_format_Suffix_Revision__c</columns>
        <columns>QPMS__Revision__c</columns>
        <columns>QPMS__Module__c</columns>
        <columns>QPMS__Site__c</columns>
        <columns>QPMS__MAXNUMBER__c</columns>
        <columns>QPMS__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QPMS__List_view</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Active__c</columns>
        <columns>QPMS__Module__c</columns>
        <columns>QPMS__Number_format__c</columns>
        <columns>QPMS__Prefix__c</columns>
        <columns>QPMS__Revision__c</columns>
        <columns>QPMS__MAXNUMBER__c</columns>
        <columns>QPMS__Suffix__c</columns>
        <columns>QPMS__Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>List view</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Number Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Number Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Max_Number_Validation</fullName>
        <active>true</active>
        <description>Max Number sholud be more than the previous value</description>
        <errorConditionFormula>(QPMS__MAXNUMBER__c &lt;  PRIORVALUE( QPMS__MAXNUMBER__c )
  &amp;&amp;  QPMS__Annual_reset__c = false )</errorConditionFormula>
        <errorDisplayField>QPMS__MAXNUMBER__c</errorDisplayField>
        <errorMessage>Max Number sholud be more than the previous value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Number_Format_validation</fullName>
        <active>true</active>
        <description>To restrict input if not a number</description>
        <errorConditionFormula>NOT(ISNUMBER(QPMS__Number_format__c))</errorConditionFormula>
        <errorDisplayField>QPMS__Number_format__c</errorDisplayField>
        <errorMessage>Only Numbers are allowed</errorMessage>
    </validationRules>
</CustomObject>